--- a/css/medium.css
+++ b/css/medium.css
@@ -3,9 +3,7 @@
   /* ------------MAIN--------------- */
   .main__info {
     width: 70%;
-  }
-  .main__info__name {
-    padding: 12px 0;
+    margin-right: 2%;
   }
   .main__info__figure {
     margin: 16px 0;
@@ -15,15 +13,10 @@
     padding-bottom: 8px;
   }
   .main__info__text {
-    padding: 5%;
-    font-size: 1.1rem;
+    padding: 15px 0 0 0;
   }
   /* ------------NAVIGATION--------------- */
 
-  .main__navigation__menu {
-    width: 90%;
-    margin-top: 5%;
-  }
   .main__navigation__menu__container {
     padding: 10% 4%;
   }
