--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,8 @@ nav {
   z-index: 10;
   -webkit-tap-highlight-color: transparent;
   width: 5%;
-  top: 15px;
-  left: 15px;
+  top: 30px;
+  left: 2%;
 }
 .switcher__image {
   max-width: 100%;
@@ -67,14 +67,17 @@ nav {
 /* -------------MAIN------------- */
 .main__container {
   display: flex;
-  padding-top: 40px;
+  flex-grow: 1;
+  padding: 30px 2% 0 2%;
 }
 .main__info {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: stretch;
   text-align: center;
+}
+.main__info__name {
+  text-transform: uppercase;
 }
 .main__info__personage {
   display: flex;
@@ -93,9 +96,11 @@ nav {
 }
 .main__info__text {
   text-align: justify;
+  flex-grow: 1;
 }
 .main__info__strip {
   display: none;
+  -webkit-tap-highlight-color: transparent;
 }
 /* -----------TABLE---------------- */
 th,
@@ -104,7 +109,7 @@ td {
   text-align: center;
 }
 .main__info__personage table {
-  width: 80%;
+  width: 90%;
 }
 .main__info__personage table caption {
   font-size: 1.4rem;
@@ -115,6 +120,7 @@ td {
   flex-direction: column;
   width: 30%;
   text-align: center;
+  align-items: center;
 }
 .main__navigation__image {
   border-radius: 50%;
@@ -135,6 +141,10 @@ td {
 .main__navigation__menu__container h2 {
   text-transform: uppercase;
 }
+.main__navigation__menu {
+  width: 100%;
+  margin-top: 5%;
+}
 .main__navigation__menu__list__link:hover {
   color: rgb(252, 233, 136);
 }
@@ -144,13 +154,13 @@ td {
 }
 /* ------------FOOTER--------------- */
 footer {
-  align-self: center;
+  /* align-self: center; */
 }
 .tooltip {
   cursor: pointer;
   position: relative;
   display: inline-block;
-  margin-bottom: 1%;
+  margin: 10px 0;
   border-bottom: 1px dotted black;
 }
 .tooltip__text {
@@ -275,12 +285,14 @@ footer {
   }
   .main__info__name {
     padding: 0 0 3% 0;
+    max-width: 75%;
+    align-self: center;
   }
   .main__info__figure {
     width: 50%;
   }
   .main__info__personage table {
-    width: 80%;
+    width: 100%;
   }
   .main__info__personage table caption {
     display: none;
@@ -309,3 +321,15 @@ footer {
     height: 2.5rem;
   }
 }
+
+/* .wrapper {
+  background-color: #fff;
+}
+.main__container {
+  background-color: gainsboro;
+}
+footer {
+  background-color: #555;
+}
+.tooltip {
+} */
